--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,41 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  opacity: 1;
+
+  transition: opacity 250ms var(--transition-timing-function);
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--transition-timing-function);
+  width: 528px;
+  height: 581px;
+
+  padding: 40px;
+
+  background-color: var(--white-color);
+}
+
 ul {
   padding: 0;
   margin: 0;
