--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,8 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
+
+/* Modal */
 .backdrop {
   position: fixed;
   top: 0;
@@ -70,15 +72,97 @@ body {
 
   background-color: var(--white-color);
 }
-.form {
+.feedback {
   margin-right: auto;
   margin-left: auto;
-  outline: 1px solid tomato;
+}
+.feedback-text {
+  display: inline-block;
+  margin-bottom: 30px;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
 }
 .form-feild {
   display: flex;
   flex-direction: column;
   margin-bottom: 28px;
+  position: relative;
+}
+
+.feedback-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  transform: translateY(-50%);
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+
+.feedback-input {
+  padding-left: 25px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.feedback-input:focus + .feedback-label,
+.feedback-input:not(:placeholder-shown) + .feedback-label {
+  transform: translateX(-17px) translateY(-37px);
+  color: var(--accent-color);
+}
+.feedback-input:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.comment-feild {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  position: relative;
+}
+.comment-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding: 12px 16px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.comment-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.comment-input:focus + .comment-label,
+.comment-input:not(:placeholder-shown) + .comment-label {
+  transform: translateY(-30px);
+  color: var(--accent-color);
+}
+.comment-input:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.policy-label {
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
 }
 
 ul {
@@ -609,7 +693,7 @@ address {
 .footersocial-link:hover {
   background-color: var(--accent-color);
 }
-.fotersocial-icon {
+.footersocial-icon {
   width: 20px;
   height: 20px;
 }
@@ -624,17 +708,21 @@ address {
   text-transform: uppercase;
 }
 
-.subscribe-form input {
+.subscribe-input {
   width: 358px;
-  height: 50px;
-  padding: 18px 12px;
+
+  padding: 15px 16px;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  background-color: #2f303a;
+  background-color: unset;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
 }
 .copyright {
   margin: 0;
@@ -674,8 +762,13 @@ address {
   color: var(--white-color);
 }
 .modal-button {
-  display: inline-block;
+  display: block;
   min-width: 200px;
+
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  outline: none;
   border: none;
   border-radius: 4px;
   padding: 10px 32px;
