--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,8 @@ body {
   margin-left: auto;
 }
 .feedback-text {
-  display: inline-block;
+  display: block;
+
   margin-bottom: 30px;
   font-size: 20px;
   line-height: 1.15;
@@ -88,13 +89,24 @@ body {
   flex-direction: column;
   margin-bottom: 28px;
   position: relative;
+  color: var(--prime-text-color);
 }
-
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: currentColor;
+}
+.feedback-input:focus ~ .input-icon {
+  fill: var(--accent-color);
+}
 .feedback-label {
   position: absolute;
   top: 50%;
   left: 42px;
   transform: translateY(-50%);
+  transition: transform 250ms var(--transition-timing-function);
 
   font-size: 14px;
   line-height: 1.14;
@@ -102,7 +114,7 @@ body {
 }
 
 .feedback-input {
-  padding-left: 25px;
+  padding-left: 35px;
   padding-top: 12px;
   padding-bottom: 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -115,6 +127,9 @@ body {
 .feedback-input:not(:placeholder-shown) + .feedback-label {
   transform: translateX(-17px) translateY(-37px);
   color: var(--accent-color);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
 }
 .feedback-input:focus {
   border: 1px solid var(--accent-color);
@@ -131,7 +146,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-
+  transition: transform 250ms var(--transition-timing-function);
   padding: 12px 16px;
 
   font-size: 14px;
@@ -141,8 +156,8 @@ body {
 .comment-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px 16px;
+  resize: none;
 
   font-size: 14px;
   line-height: 1.14;
@@ -152,17 +167,57 @@ body {
 .comment-input:not(:placeholder-shown) + .comment-label {
   transform: translateY(-30px);
   color: var(--accent-color);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
 }
 .comment-input:focus {
   border: 1px solid var(--accent-color);
   outline: none;
 }
-
+.checkbox {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
 .policy-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.checkbox-icon {
+  display: inline-block;
+
+  margin-right: 8px;
+
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--prime-text-color);
+  border-radius: 4px;
+}
+.checkbox:checked + .checkbox-icon {
+  border-color: transparent;
+  background-color: var(--accent-color);
+  background-image: url(../images/icon-check.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: border-box;
+}
+.checkbox-link {
+  color: var(--accent-color);
+}
+.policy-text {
+  margin: 0;
+  padding: 0;
   font-size: 14px;
   line-height: 1.71;
-
   letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 
 ul {
@@ -710,6 +765,7 @@ address {
 
 .subscribe-input {
   width: 358px;
+  outline: none;
 
   padding: 15px 16px;
 
@@ -745,6 +801,8 @@ address {
   padding-right: 22px;
   padding-left: 22px;
 
+  cursor: pointer;
+
   transition: background-color 250ms var(--transition-timing-function);
 
   background-color: #f5f4fa;
@@ -761,9 +819,34 @@ address {
   background-color: var(--accent-color);
   color: var(--white-color);
 }
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(8px) translateY(-8px);
+
+  cursor: pointer;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--white-color);
+  background-image: url(../images/close-black.svg);
+  background-repeat: no-repeat;
+  background-size: 18px;
+  background-position: center;
+
+  border-radius: 50%;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  outline: none;
+  border: none;
+}
 .modal-button {
   display: block;
   min-width: 200px;
+
+  cursor: pointer;
 
   margin-top: 30px;
   margin-right: auto;
@@ -791,6 +874,8 @@ address {
   margin-left: 12px;
   padding: 10px 32px;
   border: none;
+
+  cursor: pointer;
 
   color: var(--white-color);
   background-color: var(--accent-color);
