--- a/css/styles.css
+++ b/css/styles.css
@@ -782,6 +782,10 @@ address {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe-input:focus {
+  border: 1px solid var(--accent-color);
 }
 .copyright {
   margin: 0;
