добавляет обновленную стилизацию кнопок

--- a/css/styles.css
+++ b/css/styles.css
@@ -846,8 +846,8 @@ address {
   border-radius: 50%;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
-  outline: none;
-  border: none;
+
+  border-color: transparent;
 }
 .modal-button {
   display: block;
@@ -858,8 +858,8 @@ address {
   margin-top: 30px;
   margin-right: auto;
   margin-left: auto;
-  outline: none;
-  border: none;
+
+  border-color: transparent;
   border-radius: 4px;
   padding: 10px 32px;
 
@@ -880,7 +880,7 @@ address {
   border-radius: 4px;
   margin-left: 12px;
   padding: 10px 32px;
-  border: none;
+  border-color: transparent;
 
   cursor: pointer;
 
