--- a/css/styles.css
+++ b/css/styles.css
@@ -827,10 +827,13 @@ address {
   color: var(--white-color);
 }
 .close-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   right: 0;
-  transform: translateX(8px) translateY(-8px);
+  transform: translateX(-8px) translateY(8px);
 
   cursor: pointer;
 
@@ -838,20 +841,29 @@ address {
   height: 30px;
 
   background-color: var(--white-color);
-  background-image: url(../images/close-black.svg);
-  background-repeat: no-repeat;
-  background-size: 18px;
-  background-position: center;
-
   border-radius: 50%;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 
-  border-color: transparent;
+  color: var(--prime-text-color);
 }
+.close-button:hover .close-icon {
+  fill: var(--accent-color);
+}
+.close-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  transition: fill 250ms var(--transition-timing-function);
+
+  fill: currentColor;
+}
+
 .modal-button {
   display: block;
   min-width: 200px;
+
+  transition: background-color 250ms var(--transition-timing-function);
 
   cursor: pointer;
 
@@ -865,6 +877,9 @@ address {
 
   color: var(--white-color);
   background-color: var(--accent-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -872,26 +887,41 @@ address {
   text-align: center;
   text-decoration: none;
 }
+
+.modal-button:hover,
+.modal-button:focus {
+  background-color: #188ce8;
+}
 .footer-button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+
+  transition: background-color 250ms var(--transition-timing-function);
+
   min-width: 200px;
-  border-radius: 4px;
   margin-left: 12px;
   padding: 10px 32px;
+
+  border-radius: 4px;
   border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   cursor: pointer;
 
   color: var(--white-color);
   background-color: var(--accent-color);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   text-align: center;
   text-decoration: none;
+}
+.footer-button:hover,
+.footer-button:focus {
+  background-color: #188ce8;
 }
 .footer-button::after {
   background-image: url(../images/icon-send.png);
